--- a/App/src/main/resources/application.properties
+++ b/App/src/main/resources/application.properties
@@ -1,4 +1,9 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/greenplusdb
+spring.datasource.url=jdbc:mysql://localhost:3306/greenplusdb
 spring.datasource.username=root
 spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=create     
+spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
+hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
