--- a/App/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/App/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -1,5 +1,77 @@
-{"properties": [{
-  "name": "hibernate.dialect",
-  "type": "java.lang.String",
-  "description": "A description for 'hibernate.dialect'"
-}]}
+{"properties": [
+  {
+    "name": "hibernate.dialect",
+    "type": "java.lang.String",
+    "description": "A description for 'hibernate.dialect'"
+  },
+  {
+    "name": "spring.http.multipart.max-file-size",
+    "type": "java.lang.String",
+    "description": "A description for 'spring.http.multipart.max-file-size'"
+  },
+  {
+    "name": "spring.http.multipart.max-request-size",
+    "type": "java.lang.String",
+    "description": "A description for 'spring.http.multipart.max-request-size'"
+  },
+  {
+    "name": "max-file-size",
+    "type": "java.lang.String",
+    "description": "A description for 'max-file-size'"
+  },
+  {
+    "name": "max-request-size",
+    "type": "java.lang.String",
+    "description": "A description for 'max-request-size'"
+  },
+  {
+    "name": "enabled",
+    "type": "java.lang.String",
+    "description": "A description for 'enabled'"
+  },
+  {
+    "name": "multipart",
+    "type": "java.lang.String",
+    "description": "A description for 'multipart'"
+  },
+  {
+    "name": "http",
+    "type": "java.lang.String",
+    "description": "A description for 'http'"
+  },
+  {
+    "name": "spring",
+    "type": "java.lang.String",
+    "description": "A description for 'spring'"
+  },
+  {
+    "name": "SET",
+    "type": "java.lang.String",
+    "description": "A description for 'SET'"
+  },
+  {
+    "name": "hibernate.dialect",
+    "type": "java.lang.String",
+    "description": "A description for 'hibernate.dialect'"
+  },
+  {
+    "name": "blobSendChunkSize",
+    "type": "java.lang.String",
+    "description": "A description for 'blobSendChunkSize'"
+  },
+  {
+    "name": "blobSendChunkSize",
+    "type": "java.lang.String",
+    "description": "A description for 'blobSendChunkSize'"
+  },
+  {
+    "name": "blobSendChunkSize",
+    "type": "java.lang.String",
+    "description": "A description for 'blobSendChunkSize'"
+  },
+  {
+    "name": "jdbc",
+    "type": "java.lang.String",
+    "description": "A description for 'jdbc'"
+  }
+]}
