--- a/App/src/main/resources/application.properties
+++ b/App/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/greenplusdb
-spring.datasource.username=root
+spring.datasource.username=Test
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
@@ -7,3 +7,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
 hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
