--- a/App/src/main/resources/application.properties
+++ b/App/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/greenplusdb
-spring.datasource.username=Test
-spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/greenplusdb?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=dbadmin
+spring.datasource.password=password
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
