--- a/App/Dockerfile
+++ b/App/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk:8
+FROM openjdk:8-alpine
 EXPOSE 8080
 ADD target/greenplus-app-backend.jar greenplus-app-backend.jar
 ENTRYPOINT ["java","-jar","/greenplus-app-backend.jar"]
